# local-mca-underwriter-ide

./: .gitignore  DEBUG_PLAN.md  LICENSE  Master.md  README.md  code.html  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: release.yml
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  ollama.rs
src/components/: PdfViewer.vue
