[package]
name = "local-mca-underwriter-ide"
version = "0.1.0"
description = "A blazing-fast, local-first underwriting IDE"
authors = ["Open Source Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
image = "0.25"
tempfile = "3.10"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
